# keylogger

./: .gitignore  Cargo.toml
migration/: 0001_init.sql
src/: collector.rs  keycounter.rs  main.rs  main.rs.old  ui.rs
ui/: app-window.slint
