[package]
name = "keylogger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
slint = "1.15.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["sqlite", "migrate", "runtime-tokio"] }
evdev = { version = "0.13.2", features = ["tokio"] }
futures-util = "0.3.32"
tokio-udev = "0.10.0"

[build-dependencies]
slint-build = "1.15.1"